// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAlertPayload > omits the delivery action when recipients are selected 1`] = `
{
  "conditions": [
    {
      "condition": "template",
      "value_template": "{{ true }}",
    },
  ],
  "confirmation": {
    "actions": [],
    "buttons": [
      {
        "id": "confirm",
        "label": "",
      },
    ],
    "enabled": false,
    "notification": {
      "data": {
        "message": "",
      },
      "enabled": false,
    },
    "reminders": {
      "enabled": true,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:bell-outline",
  "id": "test_alert",
  "name": "Front door open",
  "notification": {
    "data": {
      "message": "The front door is open.",
      "title": "Alert",
    },
    "target": {
      "entity_id": [
        "notify.mobile_app_phone",
      ],
    },
  },
  "triggers": [
    {
      "event": "start",
      "trigger": "homeassistant",
    },
  ],
}
`;

exports[`buildAlertPayload > persists a custom alert icon 1`] = `
{
  "conditions": [
    {
      "condition": "template",
      "value_template": "{{ true }}",
    },
  ],
  "confirmation": {
    "actions": [],
    "buttons": [
      {
        "id": "confirm",
        "label": "",
      },
    ],
    "enabled": false,
    "notification": {
      "data": {
        "message": "",
      },
      "enabled": false,
    },
    "reminders": {
      "enabled": true,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:door-open",
  "id": "custom_icon_alert",
  "name": "Front door open",
  "notification": {
    "data": {
      "message": "The front door is open.",
      "title": "Alert",
    },
    "target": {
      "entity_id": [
        "notify.mobile_app_phone",
      ],
    },
  },
  "triggers": [
    {
      "event": "start",
      "trigger": "homeassistant",
    },
  ],
}
`;

exports[`buildAlertPayload > serializes incomplete drafts for YAML preview 1`] = `
{
  "conditions": [
    {
      "condition": "template",
      "value_template": "{{ true }}",
    },
  ],
  "confirmation": {
    "actions": [],
    "buttons": [
      {
        "id": "confirm",
        "label": "",
      },
    ],
    "enabled": false,
    "notification": {
      "data": {
        "message": "",
      },
      "enabled": false,
    },
    "reminders": {
      "enabled": true,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:bell-outline",
  "id": "preview_alert",
  "name": "Front door open",
  "notification": {
    "data": {
      "message": "The front door is open.",
      "title": "Alert",
    },
    "target": {},
  },
  "triggers": [
    {
      "event": "start",
      "trigger": "homeassistant",
    },
  ],
}
`;
